[gd_scene load_steps=2 format=3 uid="uid://ciap7otlx6uoa"]

[ext_resource type="Script" uid="uid://cu872skhcixd6" path="res://menus/level_menu/level_menu.gd" id="1_5dsy4"]

[node name="LevelMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5dsy4")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.4
anchor_right = 0.75
anchor_bottom = 0.7
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ReferenceRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -33.0
offset_right = 49.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="RestartLevel" type="Button" parent="ReferenceRect/VBoxContainer"]
layout_mode = 2
text = "Restart Level"

[node name="LevelSelect" type="Button" parent="ReferenceRect/VBoxContainer"]
layout_mode = 2
text = "Level Select"

[node name="Exit" type="Button" parent="ReferenceRect/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="ReferenceRect/VBoxContainer/RestartLevel" to="." method="_on_restart_level_pressed"]
[connection signal="pressed" from="ReferenceRect/VBoxContainer/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="ReferenceRect/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
